<resources>
    <string name="app_name">Rehearsapp</string>
    <string name="title_activity_maps">Репточки СПБ</string>
    <string name="title_activity_place_view">PlaceViewActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="what_is_place_name">What\'s your place name?</string>
    <string name="where_your_place_located">Where your place located?</string>
    <string name="new_place_default_name">New place</string>
    <string name="new_place_placeholder">New place</string>
    <string name="save">Save</string>
    <string name="oops">Oops!</string>
    <string name="should_not_be_empty">This field should not be empty</string>
    <string name="new_place">New Place</string>
    <string name="default_place_name">New Place</string>
    <string name="place_location_not_set">Place location must be specified</string>
    <string name="place_name_blank">Specify your place name</string>
    <string name="areaM2">%1.2f m2</string>
    <string name="priceFrom">%d ₽ / 3ч</string>
    <string name="distance">%1.1f km</string>
    <string name="distanceMeters">%d m</string>
    <string name="cannot_load_places">Cannot load places, check internet connection</string>
    <string name="error_loading_image">Error loading image</string>
    <string name="cannot_upload_header_image">Cannot update header image, try again</string>
    <string name="cannot_retrieve_data">Cannot retrieve some data</string>
    <string name="rooms">Rooms</string>
    <string name="add_room">Add room</string>
    <string name="type_room_name">Type room name</string>
    <string name="room_photos">Room photos</string>
    <string name="price">Price</string>
    <string name="area">Area</string>
    <string name="failed_to_add_room">Failed to add room!</string>
    <string name="new_room">New Room</string>
    <string name="cannot_save_room">Cannot save room</string>
    <string name="image">image</string>
    <string name="add_photo">Add photo</string>
    <string name="failed_to_save">Failed to save photo to server</string>
    <string name="cannot_load_image">Cannot load image</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_message">Welcome, %s, again…</string>
    <string name="welcome_to_app">Welcome to Rehearsapp, %s</string>
    <string name="cannot_load_place">Cannot load place</string>
    <string name="what_are_you_looking_for">What you are looking for?</string>
    <string name="i_am_musician">I\'m looking for a place to practice</string>
    <string name="i_m_place_owner">I\'m place owner</string>
    <string name="book">book</string>
    <string name="undefined">undefined</string>
    <string name="time_span">%s - %s</string>
    <string name="taken_by">Taken by %s</string>
    <string name="dollars">%1.2f$</string>
    <string name="error_booking_slot">Error while booking slot, try again later</string>
    <string name="login_to_book">login to book</string>
    <string name="call">Позвонить</string>
    <string name="open">Open</string>
    <string name="find_places_nearby">Карта репточек</string>
    <string name="service_not_available">service not available</string>
    <string name="invalid_lat_long_used">invalid latlong used</string>
    <string name="no_address_found">no address found</string>
    <string name="address_found">address found</string>
    <string name="no_geocoder_available">Error: No geocoder available</string>
    <string name="cannot_determine_place_location">Cannot determine place location</string>
    <string name="loading_address">Loading address...</string>
    <string name="open_web">Сайт</string>
    <string name="telephone_number">Telephone number</string>
    <string name="website_or_social_media_page">Website or social media page</string>
    <string name="no_telephone">No telephone</string>
    <string name="no_website">No website</string>

    <integer name="com_vk_sdk_AppId">7171332</integer>

</resources>
